--- a/views/manager_change_dormitory.hbs
+++ b/views/manager_change_dormitory.hbs
@@ -91,7 +91,7 @@
       </div>
     </header>
 
-    <div id="container">
+    <div id="container" style="background-color: #F2F3EB;">
 
   <div class="icon_wrapper">
       <h1>&bull;換宿表單 &bull;</h1>
