--- a/views/manager_equipment.hbs
+++ b/views/manager_equipment.hbs
@@ -110,10 +110,10 @@
                     <input type="text" class="form-control" id="room" name="room" value=""/>
                   </td>
                   <td align='center' valign="middle">
-                    <input type="checkbox" name="checkBox" value="1" style="width:27px;height:27px"/>
+                    <input type="checkbox" id="checkbox" name="checkBox" value="1" style="width:27px;height:27px"/>
                   </td>
                   <td>
-                    <button  id="search"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="submit"  name="action"  value="search">  查詢設備
+                    <button  id="search1"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="submit"  name="action"  value="search">  查詢設備
                     </button>
                   </td>                
                   <td>
@@ -174,6 +174,7 @@
         <th scope="col" align='center' valign="middle">設備狀況</th>
         <th></th>
         <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -200,6 +201,10 @@
           <td>
             <button style=" width: 120px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset;"
              type="submit" name="action" value="delete"> 刪除設備</button>
+          </td>  
+           <td >         
+            <button id="finish" style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff;; color: #ffffff; border: 2px #5769b4 outset;" 
+            type="submit" name="action" value="update"> 完成</button>
           </td>
         </form>
       </tr>
@@ -289,7 +294,7 @@
         <!--定義表格的橫列 (row)-->
         <th scope="col" align='center' valign="middle">設備種類</th>
         <th></th>
-        <th></th>
+        
       </tr>
     </thead>
     <tbody>
@@ -298,12 +303,9 @@
         <form action="/managerToEquipmentType/action" method="post">
           <input type="hidden" name="searchSQL" value="{{../searchSQL}}"/>             
           <input type="hidden" name="type" value="{{this.E_Type}}">         
-          <td align='center' valign="middle">{{this.E_Type}}</td>
-          {{!-- <td>
-            <button style=" width: 120px; height: 40px; background-color: #5769b4; color: #ffffff; border: 2px #5769b4 outset;" 
-            type="submit" name="action" value="update"> 更新狀況</button>
-          </td> --}}
-          <td>
+          <td valign="middle">{{this.E_Type}}</td>
+
+          <td valign="middle">
             <button style=" width: 120px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset;"
              type="submit" name="action" value="delete"> 刪除設備</button>
           </td>
@@ -343,6 +345,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="manager_to_dormitory.js"></script>
+  
   </body>
 </html>
