--- a/views/home_visitor.hbs
+++ b/views/home_visitor.hbs
@@ -55,12 +55,12 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="list-inline-item">
-              <a href="/" class="home">
+             <a href="/">
                 <span class="fa-stack fa-lg">
-                  <button data-bs-toggle="tooltip" data-bs-placement="top" title="返回首頁"
-                  style="width: 50px; height: 50px;color:#ffffff"
-                  class="fa-solid fa-house-user"
-                ></button>
+                  <i
+                    style="width: 50px; height: 50px;color:#ffffff"
+                    class="fa-solid fa-house-user"
+                  ></i>
                 </span>
               </a>
             </li>
@@ -112,7 +112,7 @@
           </div>
          
           <!-- Divider-->
-          <hr class="my-4" />
+          {{!-- <hr class="my-4" />
           <!-- Post preview-->
           <div class="post-preview">
             <a href="/visitor_to_reservation">
@@ -121,7 +121,7 @@
               訪客可以在此預約參觀宿舍
               </h5>
             </a>
-          </div>
+          </div> --}}
         <hr class="my-4" />
         </div>
       </div>
