--- a/views/login.hbs
+++ b/views/login.hbs
@@ -105,7 +105,7 @@ background-attachment: fixed;backdrop-filter:blur(3px);   " background='../350.j
           <h5>忘記密碼</h5>
         </a>
          <a href="/home_visitor">
-          <h5>訪客登入</h5>
+          <h5 style="color:#163a82">訪客登入</h5>
         </a>
 
       </div>
