--- a/views/manager_change_dormitory.hbs
+++ b/views/manager_change_dormitory.hbs
@@ -97,49 +97,41 @@
       <h1>&bull;換宿表單 &bull;</h1>
   </div>
 
-  <form action="#" method="post" id="contact_form">
+  <form action="/managerToChangeDormitory/action" method="post" id="contact_form">
     <div class="name">
       <label for="name"></label>
-      <input type="text" placeholder="請輸入學生1學號" name="name" id="name_input" required>
+      <input type="text" placeholder="請輸入學生1學號" name="studentID1" id="studentID1" required>
     </div>
     <div class="name1">
       <label for="name1"></label>
-      <input type="text" placeholder="請輸入學生2學號" name="name" id="name_input1" required>
+      <input type="text" placeholder="請輸入學生2學號" name="studentID2" id="studentID2" required>
     </div>
 
     <div class="subject">
       <label for="subject"></label>
-      <select name="subject" id="subject_input" required>
-       <option selected>請選擇換宿棟別</option>
-       <option value=1>學生第一宿舍(OA-男)</option>
-       <option value=2>學生第一宿舍(OB-女)</option>
-       <option value=3>學生第二宿舍(OE-男)</option>
-       <option value=4>學生第二宿舍(OF-女)</option>
-       <option value=5>綜合宿舍(B01-男)</option>
+      <select id="building" name="building" class="form-select">
+      <option selected>選擇大樓</option>
+      {{#each Dormessage}}
+      <option value={{this.DB_Number}}>{{this.DB_Name}}</option>
+      {{/each}}
       </select>
     </div>
 
     <div class="name">
       <label for="name"></label>
-      <input type="text" placeholder="請輸入學生1原始房間" name="name" id="name_input" required>
+      <input type="text" placeholder="請輸入學生1原始房間" name="room1" id="room1" required>
     </div>
     <div class="name1">
       <label for="name1"></label>
-      <input type="text" placeholder="請輸入學生2原始房間" name="name" id="name_input1" required>
-    </div>
-        <div class="name">
-      <label for="name"></label>
-      <input type="text" placeholder="請輸入學生1欲換至的房間" name="name" id="name_input" required>
-    </div>
-    <div class="name1">
-      <label for="name1"></label>
-      <input type="text" placeholder="請輸入學生2欲換至的房間" name="name" id="name_input1" required>
-    </div>
+      <input type="text" placeholder="請輸入學生2原始房間" name="room2" id="room2" required>
 
     <div class="submit">
-      <input type="submit" value="確認送出" id="form_button" />
+      <button style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; "type="submit"name="action"value="change">確認送出</button>
     </div>
   </form><!-- // End form -->
+  {{#if ErrMessage}}
+      <h4 style="color:red" ; class="alert alert-danger mt-4">{{ErrMessage}}</h4>
+  {{/if}}
 </div><!-- // End #container -->
 
     <br /><br /><br />
