--- a/views/student_to_manager.hbs
+++ b/views/student_to_manager.hbs
@@ -91,6 +91,7 @@
           <th scope="col" align='center' valign="middle">名稱</th>
           <th scope="col" align='center' valign="middle">連絡電話</th>
           <th scope="col" align='center' valign="middle">Email</th>
+          <th scope="col" align='center' valign="middle">身分</th>
         </tr>
 
         <tbody>
@@ -100,6 +101,7 @@
             <td >{{this.M_Name}}</td>
             <td >{{this.M_Phone}}</td>
             <td >{{this.M_Email}}</td>
+            <td >{{this.Permission}}</td>
           </tr>      
           {{/each}} 
           <tr></tr>
