--- a/views/home_visitor.hbs
+++ b/views/home_visitor.hbs
@@ -55,7 +55,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="list-inline-item">
-             <a href="/">
+             <a href="/home_visitor">
                 <span class="fa-stack fa-lg">
                   <i
                     style="width: 50px; height: 50px;color:#ffffff"
