--- a/views/manager_studentAccommodation.hbs
+++ b/views/manager_studentAccommodation.hbs
@@ -235,6 +235,6 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="manager_to_dormitory.js"></script>
+  {{!-- <script src="manager_to_dormitory.js"></script> --}}
 </body>
 </html>
