--- a/views/manager_change_dormitory.hbs
+++ b/views/manager_change_dormitory.hbs
@@ -64,12 +64,12 @@
            
               <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
-              href="/student_to_apply">住宿申請</a>
+              href="/manager_to_apply">住宿申請</a>
             </li>
-            <li class="nav-item">
+            {{!-- <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
               href="/student_checkout_dormitory">退宿申請</a>
-            </li>
+            </li> --}}
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
               href="/login">Log out</a>
