--- a/views/manager_equipment.hbs
+++ b/views/manager_equipment.hbs
@@ -111,7 +111,7 @@
                   <td>
                     <button id="search1"
                       style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"
-                      type="submit" name="action" value="search"> 查詢設備
+                      type="submit" name="action"  value="search"> 查詢設備
                     </button>
                   </td>
                   <td>
@@ -361,6 +361,7 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
+  <script src="manager_to_dormitory.js"></script>
 </body>
 
 </html>
