--- a/views/manager_to_apply.hbs
+++ b/views/manager_to_apply.hbs
@@ -61,10 +61,10 @@
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
               href="/manager_change_dormitory">換宿申請</a>
             </li>
-            <li class="nav-item">
+            {{!-- <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
               href="/manager_checkout_dormitory">退宿申請</a>
-            </li>
+            </li> --}}
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
               href="/login">Log out</a>
