舍監房間設備

--- a/views/supervisor_equipment.hbs
+++ b/views/supervisor_equipment.hbs
@@ -115,7 +115,7 @@
                     <input type="checkbox" name="checkBox" value="1" style="width:27px;height:27px"/>
                   </td>
                   <td>
-                    <button  id="search"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="submit"  name="action"  value="search">  查詢設備
+                    <button  id="search1"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="submit"  name="action"  value="search">  查詢設備
                     </button>
                   </td>                
               </tr>
