--- a/views/supervisor_to_manager.hbs
+++ b/views/supervisor_to_manager.hbs
@@ -95,7 +95,7 @@
         </tr>
 
         <tbody>
-           <!-- {{#each message}}  -->
+          {{#each message}}
           <tr>
             <th scope="row" align='center' valign="middle">{{this.M_ID}}</th>
             <td >{{this.M_Name}}</td>
@@ -103,7 +103,7 @@
             <td >{{this.M_Email}}</td>
             <td >{{this.Permission}}</td>
           </tr>      
-          <!-- {{/each}}  -->
+          {{/each}} 
           <tr></tr>
         </tbody>
       </table>
