--- a/views/student_to_apply.hbs
+++ b/views/student_to_apply.hbs
@@ -149,8 +149,9 @@
                 
                 <form action="/studentToApply/delete" method="POST">
                   <td>
-                    <button id="pay"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="submit"  name=""  value="pay">  繳費
-                    </button>
+                    <a href="/bill"><button id="pay"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="button"  name=""  value="pay">  繳費
+                    </button></a>
+
                   </td>       
                   <td>
                     <button style=" width: 75px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset;" type="submit" name="action" value="delete" > 刪除
